# Waypoint

./: .gitignore  .pre-commit-config.yaml  ADR-0001-ast-pgvector.md  ADR-0003-training-dataset-composition.md  ADR-0004-fine-tuning-architecture.md  ADR-0005-orchestrator-design.md  Dockerfile.sandbox  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
checkpoints/best/: README.md  adapter_config.json  adapter_model.safetensors
config/: training_full.yaml  training_smoke_test.yaml
configs/: .gitkeep  agent.yaml  evaluation.yaml  hybrid_sweep.yaml  ingestion.yaml  sandbox.yaml  training_data.yaml
configs/training/: training_run_03.yaml  training_smoke_test.yaml
data/eval/: blind_test_set.jsonl  eval_set.jsonl  eval_set_tuning.jsonl  fresh_15.jsonl  human_labels.jsonl
data/training/: dropped_pairs.jsonl
docs/: agent_orchestrator.md  evaluation.md  evaluation_v2.md  ingestion.md  training_data.md  training_hardware.md
prompts/: llm_judge_rubric.txt  synthetic_qa_generation.txt
scripts/: add_eval_example.py  analyze_diff.py  analyze_weaknesses.py  calibrate_judge.py  check_metrics.py  compare_checkpoint_to_baseline.py  compare_methods.py  compare_runs.py  cross_check_failures.py  debug_training_loss.py  flag_easy_questions.py  generate_dashboard.py  generate_multihop_synthetic.py  generate_report.py  generate_synthetic_eval.py  generate_training_data.py  mock_lora.py  plot_metrics.py  plot_recall.py  review_eval.py  run_agent.py  run_agent_eval.py  run_eval.py  run_ingestion.py  spot_check_lengths.py  spot_check_multihop.py  test_parse.py
src/agent/: __init__.py  orchestrator.py  parser.py  state.py  trace.py
src/eval/: __init__.py  judge.py  loader.py  metrics.py
src/ingestion/: __init__.py  chunker.py  crawler.py  doc_chunker.py  embed.py  indexer.py  logger.py  models.py
src/retrieval/: __init__.py  fusion.py  pipeline.py  reranker.py
src/training/: schema.py  (+2 more)
tests/: conftest.py  test_chunker.py  test_crawler.py  test_docstring_pairs.py  test_embed.py  test_eval_metrics.py  test_filtering.py  test_fusion.py  test_indexer.py  test_judge.py  test_lora_sanity.py  test_reranker_sanity.py  test_retrieval_fusion.py  test_retrieval_reranker.py  test_rrf_disjoint.py
(+19 files in other folders)
